# optitrack_bridge

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  envfile  envfile.ps1  package.xml
client/python/: requirements.txt  tracker_packet_pb2.py  tracker_packet_pb2_grpc.py
cmake/: grpc.cmake  natnet.cmake
examples/: CMakeLists.txt
examples/example_grpc/: CMakeLists.txt  example_grpc_client.cxx  example_grpc_server.cxx
examples/example_natnet_client/: CMakeLists.txt  example_natnet_client.cxx
examples/example_python_grpc/: main.py
examples/example_timestamp/: CMakeLists.txt  example_timestamp.cxx
include/optitrack_bridge/: datamodels.h  debug.h
lib/MotiveSM/: CMakeLists.txt
lib/MotiveSM/include/: MotiveConfig.h  MotiveSM.h  MotiveUtils.h
lib/MotiveSM/src/: MotiveConfig.cxx  MotiveSM.cxx  MotiveUtils.cxx
lib/ring_buf/include/: ring_buf.hpp
lib/time_utils/include/: time_utils.hpp
lib/tracker_packet/: CMakeLists.txt
lib/tracker_packet/include/: client_impl.h  server_impl.h
lib/tracker_packet/manifests/: tracker_packet.proto
lib/tracker_packet/src/: client_impl.cxx  server_impl.cxx
manifests/docker-ros1/: Dockerfile
manifests/docker-ros2/: Dockerfile
manifests/package.xml/: ros1.xml  ros2.xml
scripts/: install_grpc.bash  install_grpc.ps1  install_sdk.bash  install_sdk.ps1
src/: CMakeLists.txt  main.cxx  main_ros1.cxx  main_ros2.cxx
